--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 <body>
     <canvas id="fireworks"></canvas>
     <p id="intro">Hai orang Jepang, apa kabar? Coba klik tombol di bawah.</p>
-    <button id="start">Klik Aku</button>
+    <button id="start">Lemeng dan Boneng</button>
     <h1 id="greeting" style="display: none;">Selamat Ulang Tahun Mbak Lia</h1>
     <div id="cake-container">
         <div class="container">
